# binance-data

./: README.md  clickhouse_setup.sql  config.example.json  general.py  nohup.out  pyproject.toml  requirements.txt  sign.py  start.sh  test.sh
binance_toolkit/: __init__.py  __main__.py  auth.py  cli.py  client.py  config.py  exceptions.py  toolkit.py
binance_toolkit/api/: __init__.py  account.py  base.py  coin_futures.py  market.py  trade.py
binance_toolkit/collector/: __init__.py  mark_price_collector.py  price_collector.py
binance_toolkit/storage/: __init__.py  influxdb.py  kafka.py
binance_toolkit/ws/: __init__.py  coin_mark_price_stream.py  mark_price_stream.py  usdt_mark_price_stream.py
tests/: test_basic.py
