[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binance-toolkit"
version = "0.1.0"
description = "一个可扩展的 Binance API 工具箱"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "LGPL-3.0-or-later" }

dependencies = [
    "requests>=2.28",
    "cryptography>=41.0",
    "websocket-client>=1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]
influxdb = [
    "influxdb3-python>=0.6",
]

[project.scripts]
binance-toolkit = "binance_toolkit.cli:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
